Try another fix for displaying captions on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1344,24 +1344,6 @@ input, select, textarea {
 
 		}
 
-		@media screen and (max-width: 400px) {
-
-			.poptrox-popup:before {
-				display: none;
-			}
-
-			.poptrox-popup .caption {
-				display: none !important;
-			}
-
-			.poptrox-popup .closer,
-			.poptrox-popup .nav-previous,
-			.poptrox-popup .nav-next {
-				display: none !important;
-			}
-
-		}
-
 /* Wrapper */
 
 	#wrapper {
